# oziexplorer_uiview_converter_gtk2

./: .gitignore  CMakeLists.txt  ConversionError.cpp  ConversionError.h  ConversionTest.cpp  ConversionWorker.cpp  ConversionWorker.h  Converter.cpp  Converter.h  Helper.cpp  Helper.h  LICENSE  README.md  main.cpp  oziexplorer_uiview_converter_gtk2.glade
